--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -6429,12 +6429,18 @@ single precision floating point numbers.
 (@option{=INT}) The number of digits to print after the floating point for
 double precision floating point numbers.
 
-@item --fitstabletype
-(@option{=STR}) The type of FITS table when a FITS file is specified as the
-output. This option can only have two values: @option{binary}, or
-@option{ascii}. However, currently ASCII FITS table outputs are not yet
-implemented due to lack of need. If you need it, please get in touch with
-so we implement it.
+@item --outtabletype
+(@option{=STR}) The output table type (for example plain text, FITS ascii,
+or FITS binary). If this option is not called on the command-line or any of
+the configuration files and no output filename is given with the
+@option{--output} option (see @ref{Common options}), then the columns that
+are read will be printed in the standard output (on the command-line).
+However, if it is called, it can only have one of these values:
+@option{txt}, @option{fits-ascii}, @option{fits-binary} for the current
+types of recognized output table types. If the output is a FITS file, this
+option is necessary because there are two types of FITS tables.
+
+
 @end table
 
 
