Table's output file type set common sense
Previously, when the (old) `--outtabletype' option was given, the output
was forced to be a file (automatic output would be triggered when no output
filename was given). But this is not too natural, because you might have a
special FITS type as a preference, and thus put it in your configuration
file. But then, you could never pipe your outputs to other programs (show
the table on stdout).

So now, we have a `--tabletype' option, with the same acceptable values as
before, but now it won't be used to set a filename. In short, Table won't
be using automatic output: when no output type is given, the table will be
printed in stdout. The value to `--tabletype' is only relevant for table
formats that can't directly be determined from the filename.

This option will later be moved as a common option, for use by all the
programs that print tables as output. As a preparation, the function that
determines the recognized internal macro for the table type from a
string. The same will happen for the `searchin' parameter, so the old
`gal_table_searchin_from_str' was also renamed to
`gal_table_string_to_searchin' to fit the same naming style as the new
`gal_table_string_to_type'.

Also, `strtol' saves values as zero when they couldn't be read. This would
cause problems when setting widths. So now, in plain text printing, when
the width is smaller and equal to zero, the default widths will be evoked,
not when it is just smaller than zero.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -6432,16 +6432,28 @@ single precision floating point numbers.
 (@option{=INT}) The number of digits to print after the floating point for
 double precision floating point numbers.
 
-@item --outtabletype
-(@option{=STR}) The output table type (for example plain text, FITS ascii,
-or FITS binary). If this option is not called on the command-line or any of
-the configuration files and no output filename is given with the
-@option{--output} option (see @ref{Common options}), then the columns that
-are read will be printed in the standard output (on the command-line).
-However, if it is called, it can only have one of these values:
-@option{txt}, @option{fits-ascii}, @option{fits-binary} for the current
-types of recognized output table types. If the output is a FITS file, this
-option is necessary because there are two types of FITS tables.
+@item -t
+@itemx --tabletype
+(@option{=STR}) The output file's table type when a filename is given to
+the @option{--output} option (see @ref{Common options}). This is ofcourse
+only relevant when the type of the table cannot be deduced from its
+filename. For example, if a name ending in @file{.fits} was given to
+@option{--output}, then Gnuastro knows you want a FITS table. But there are
+two types of FITS tables: FITS ASCII, and FITS binary. Thus, with this
+option, the program is able to identify which type you want. The currently
+recognized values to this option are:
+
+@table @command
+@item txt
+A plain text table with space characters between the columns. Setting
+@option{--tabletype} to this value is acceptable, but irrelevant. Because a
+plain text table only currently has one format and is the default when the
+output filename wasn't recognized.
+@item fits-ascii
+A FITS ASCII table.
+@item fits-binary
+A FITS binary table.
+@end table
 
 
 @end table
